fix(pro:search): fix overflowed style to be overlap with elements below

--- a/packages/pro/search/style/themes/default.variable.less
+++ b/packages/pro/search/style/themes/default.variable.less
@@ -2,6 +2,7 @@
 @pro-search-min-height: @height-md;
 @pro-search-content-padding-horizontal: @spacing-xs;
 @pro-search-content-padding-vertical: @spacing-xs;
+@pro-search-content-z-index: @zindex-l1-2;
 
 @pro-search-border-width: @form-border-width;
 @pro-search-border-style: @form-border-style;
